Created card grid and rendered cards dynamically

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   color: #60514f;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
 }
 
 code {
