Impleminting function that compares two selected cards and matching them

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,10 +5,14 @@
   grid-gap: 20px;
 }
 
-.back {
-  width: 200px;
+.card {
+  position: relative;
 }
 
-.front {
+.card img {
+  display: block;
   width: 200px;
+  border: 2px solid #fff;
+  border-radius: 6px;
 }
+
