--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,3 +16,13 @@
   border-radius: 6px;
 }
 
+/* When card has flipped class show front picture not back cover */
+.card .front {
+  transform: rotateY(90deg);
+  position: absolute;
+}
+
+.flipped .front {
+  transform: rotateY(0deg);
+}
+
