--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -19,10 +19,22 @@
 /* When card has flipped class show front picture not back cover */
 .card .front {
   transform: rotateY(90deg);
+  transition: all ease-in 0.2s;
   position: absolute;
 }
 
 .flipped .front {
   transform: rotateY(0deg);
+  transition-delay: 0.2s;
 }
 
+/* Back of card cover | Animating card rotation */
+.card .back {
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
+}
+
+.flipped .back {
+  transform: rotateY(90deg);
+  transition-delay: 0s;
+}
