Functionality for showing number of turns taken to reach total match

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,6 +5,23 @@
   grid-gap: 20px;
 }
 
+.card-grid .card {
+  opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 1s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 .card {
   position: relative;
 }
@@ -38,3 +55,4 @@
   transform: rotateY(90deg);
   transition-delay: 0s;
 }
+
